// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for the ResourceForm component. For mandatory field - should show validation errors and hide one of them on input value change. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="flex flex-col"
  >
    <div
      class="hidden lg:block px-8"
    >
      <div
        class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="inline text-dial-sapphire h5"
          href="/"
        >
          Home
        </a>
        <div
          class="inline h5"
        >
           &gt; 
          <a
            class="text-dial-gray-dark"
            href="/"
          />
        </div>
      </div>
    </div>
    <div
      class="pb-8 px-8"
    >
      <div
        class="sm:px-0 max-w-full mx-auto"
        id="content"
      >
        <form>
          <div
            class="bg-edit shadow-md rounded px-8 pt-6 pb-12 mb-4 flex flex-col gap-3"
          >
            <div
              class="text-2xl font-semibold text-dial-sapphire pb-4"
            >
              Create New Resource
            </div>
            <div
              class="flex flex-col lg:flex-row gap-4"
            >
              <div
                class="w-full lg:w-1/2 flex flex-col gap-y-3"
              >
                <div
                  class="form-field-wrapper"
                  data-testid="resource-name"
                >
                  <label
                    class="form-field-label required-field"
                    for="name"
                  >
                    Resource Name
                  </label>
                  <input
                    class="w-full"
                    id="name"
                    name="name"
                    placeholder="Resource Name"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-field-wrapper"
                >
                  <label
                    class="form-field-label"
                  >
                    Resource Logo
                  </label>
                  <label
                    class="flex items-center"
                  >
                    <input
                      accept=".jpg,.jpeg,.png,.bmp"
                      class="bg-white file:hidden w-full pr-10"
                      data-testid="file-uploader"
                      name="imageFile"
                      type="file"
                    />
                    <div
                      class="-ml-11 flex p-1"
                    >
                      <span
                        class="h-full pl-1 border-l text-2xl text-dial-gray-dark border-dial-gray-dark"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          version="1.1"
                          viewBox="0 0 16 16"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13 14h-10v-2l3-5 4.109 5 2.891-2v4z"
                          />
                          <path
                            d="M13 7.5c0 0.828-0.672 1.5-1.5 1.5s-1.5-0.672-1.5-1.5 0.672-1.5 1.5-1.5c0.828 0 1.5 0.672 1.5 1.5z"
                          />
                          <path
                            d="M14.341 3.579c-0.347-0.473-0.831-1.027-1.362-1.558s-1.085-1.015-1.558-1.362c-0.806-0.591-1.197-0.659-1.421-0.659h-7.75c-0.689 0-1.25 0.561-1.25 1.25v13.5c0 0.689 0.561 1.25 1.25 1.25h11.5c0.689 0 1.25-0.561 1.25-1.25v-9.75c0-0.224-0.068-0.615-0.659-1.421zM12.271 2.729c0.48 0.48 0.856 0.912 1.134 1.271h-2.406v-2.405c0.359 0.278 0.792 0.654 1.271 1.134zM14 14.75c0 0.136-0.114 0.25-0.25 0.25h-11.5c-0.135 0-0.25-0.114-0.25-0.25v-13.5c0-0.135 0.115-0.25 0.25-0.25 0 0 7.749-0 7.75 0v3.5c0 0.276 0.224 0.5 0.5 0.5h3.5v9.75z"
                          />
                        </svg>
                      </span>
                    </div>
                  </label>
                  <div
                    class="text-sm w-full text-dial-gray-dark"
                  >
                    Note: Supported file types are jpg, png, and bmp
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                >
                  <label
                    class="text-dial-sapphire required-field"
                    for="link"
                  >
                    Resource Location
                  </label>
                  <div
                    class="border border-transparent url-input bg-white flex items-center"
                  >
                    <input
                      class="url w-full placeholder-dial-gray border-0 py-0 focus:outline-0"
                      id="link"
                      placeholder="Resource Location"
                      value=""
                    />
                  </div>
                  <p
                    class="text-sm text-validation-error"
                  >
                    This field is required
                  </p>
                </div>
                <label
                  class="flex gap-x-2 mb-2 items-center self-start"
                >
                  <input
                    class="h-8 w-8"
                    data-testid="checkbox"
                    name="showInExchange"
                    type="checkbox"
                  />
                  Show resource in the Exchange
                </label>
                <label
                  class="flex gap-x-2 mb-2 items-center self-start"
                >
                  <input
                    class="h-8 w-8"
                    data-testid="checkbox"
                    name="showInWizard"
                    type="checkbox"
                  />
                  Show resource in the recommendation wizard
                </label>
              </div>
              <div
                class="w-full lg:w-1/2"
              >
                <div
                  class="block flex flex-col gap-y-2"
                  data-testid="resource-description"
                >
                  <label
                    class="form-field-label required-field"
                  >
                    Resource Description
                  </label>
                  <div
                    class="relative"
                  >
                    <svg
                      class="absolute text-lg inset-x-1/2 top-10 spinner"
                      fill="currentColor"
                      height="2em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="2em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                      />
                    </svg>
                    <div
                      class="validation-error html-editor"
                    >
                      <textarea
                        id="description-editor"
                        style="visibility: hidden;"
                      />
                    </div>
                  </div>
                  <p
                    class="text-sm text-validation-error"
                  >
                    This field is required
                  </p>
                </div>
              </div>
            </div>
            <div
              class="flex flex-wrap text-xl mt-8 gap-3"
            >
              <button
                class="submit-button"
                data-testid="submit-button"
                type="submit"
              >
                Submit Resource
              </button>
              <button
                class="cancel-button"
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the ResourceForm component. Should match snapshot - create. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="flex flex-col"
  >
    <div
      class="hidden lg:block px-8"
    >
      <div
        class="bg-white pb-3 lg:py-4 whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="inline text-dial-sapphire h5"
          href="/"
        >
          Home
        </a>
        <div
          class="inline h5"
        >
           &gt; 
          <a
            class="text-dial-gray-dark"
            href="/"
          />
        </div>
      </div>
    </div>
    <div
      class="pb-8 px-8"
    >
      <div
        class="sm:px-0 max-w-full mx-auto"
        id="content"
      >
        <form>
          <div
            class="bg-edit shadow-md rounded px-8 pt-6 pb-12 mb-4 flex flex-col gap-3"
          >
            <div
              class="text-2xl font-semibold text-dial-sapphire pb-4"
            >
              Edit Example Resource
            </div>
            <div
              class="flex flex-col lg:flex-row gap-4"
            >
              <div
                class="w-full lg:w-1/2 flex flex-col gap-y-3"
              >
                <div
                  class="form-field-wrapper"
                  data-testid="resource-name"
                >
                  <label
                    class="form-field-label required-field"
                    for="name"
                  >
                    Resource Name
                  </label>
                  <input
                    class="w-full"
                    id="name"
                    name="name"
                    placeholder="Resource Name"
                    type="text"
                    value=""
                  />
                </div>
                <div
                  class="form-field-wrapper"
                >
                  <label
                    class="form-field-label"
                  >
                    Resource Logo
                  </label>
                  <label
                    class="flex items-center"
                  >
                    <input
                      accept=".jpg,.jpeg,.png,.bmp"
                      class="bg-white file:hidden w-full pr-10"
                      data-testid="file-uploader"
                      name="imageFile"
                      type="file"
                    />
                    <div
                      class="-ml-11 flex p-1"
                    >
                      <span
                        class="h-full pl-1 border-l text-2xl text-dial-gray-dark border-dial-gray-dark"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          version="1.1"
                          viewBox="0 0 16 16"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M13 14h-10v-2l3-5 4.109 5 2.891-2v4z"
                          />
                          <path
                            d="M13 7.5c0 0.828-0.672 1.5-1.5 1.5s-1.5-0.672-1.5-1.5 0.672-1.5 1.5-1.5c0.828 0 1.5 0.672 1.5 1.5z"
                          />
                          <path
                            d="M14.341 3.579c-0.347-0.473-0.831-1.027-1.362-1.558s-1.085-1.015-1.558-1.362c-0.806-0.591-1.197-0.659-1.421-0.659h-7.75c-0.689 0-1.25 0.561-1.25 1.25v13.5c0 0.689 0.561 1.25 1.25 1.25h11.5c0.689 0 1.25-0.561 1.25-1.25v-9.75c0-0.224-0.068-0.615-0.659-1.421zM12.271 2.729c0.48 0.48 0.856 0.912 1.134 1.271h-2.406v-2.405c0.359 0.278 0.792 0.654 1.271 1.134zM14 14.75c0 0.136-0.114 0.25-0.25 0.25h-11.5c-0.135 0-0.25-0.114-0.25-0.25v-13.5c0-0.135 0.115-0.25 0.25-0.25 0 0 7.749-0 7.75 0v3.5c0 0.276 0.224 0.5 0.5 0.5h3.5v9.75z"
                          />
                        </svg>
                      </span>
                    </div>
                  </label>
                  <div
                    class="text-sm w-full text-dial-gray-dark"
                  >
                    Note: Supported file types are jpg, png, and bmp
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-2 mb-2"
                >
                  <label
                    class="text-dial-sapphire required-field"
                    for="link"
                  >
                    Resource Location
                  </label>
                  <div
                    class="border border-transparent url-input bg-white flex items-center"
                  >
                    <span
                      class="select-none text-dial-gray"
                    >
                      https://
                    </span>
                    <input
                      class="url w-full placeholder-dial-gray border-0 py-0 focus:outline-0"
                      id="link"
                      placeholder="Resource Location"
                      value="some-random-url"
                    />
                  </div>
                </div>
                <label
                  class="flex gap-x-2 mb-2 items-center self-start"
                >
                  <input
                    class="h-8 w-8"
                    data-testid="checkbox"
                    name="showInExchange"
                    type="checkbox"
                  />
                  Show resource in the Exchange
                </label>
                <label
                  class="flex gap-x-2 mb-2 items-center self-start"
                >
                  <input
                    class="h-8 w-8"
                    data-testid="checkbox"
                    name="showInWizard"
                    type="checkbox"
                  />
                  Show resource in the recommendation wizard
                </label>
              </div>
              <div
                class="w-full lg:w-1/2"
              >
                <div
                  class="block flex flex-col gap-y-2"
                  data-testid="resource-description"
                >
                  <label
                    class="form-field-label required-field"
                  >
                    Resource Description
                  </label>
                  <div
                    class="relative"
                  >
                    <svg
                      class="absolute text-lg inset-x-1/2 top-10 spinner"
                      fill="currentColor"
                      height="2em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="2em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
                      />
                    </svg>
                    <div
                      class="html-editor"
                    >
                      <textarea
                        id="description-editor"
                        style="visibility: hidden;"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex flex-wrap text-xl mt-8 gap-3"
            >
              <button
                class="submit-button"
                data-testid="submit-button"
                type="submit"
              >
                Submit Resource
              </button>
              <button
                class="cancel-button"
                type="button"
              >
                Cancel
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
